--- a/mon/index.html
+++ b/mon/index.html
@@ -36,8 +36,30 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
     <div id="overlay-loader"></div>
+    <div id="overlay-menu"></div>
     <div class="loader-wrap">
          <div class="preloader "></div>
+    </div>
+    <div class="mobile_menu_block">
+        <div class="offcavnas_menu">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <button>
+                            <i class="fa fa-times" aria-hidden="true"></i>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <div class="offcavnas_menu_main">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- header-start -->
@@ -46,20 +68,36 @@
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
                     <div class="row align-items-center no-gutters">
-                        <div class="col-xl-5 col-lg-6">
-                            <div class="main-menu  d-none d-lg-block">
+                        <!-- brand IMG-->
+                        <div class="col-6 col-md-6 col-xl-2 col-lg-2  col-sm-6">
+                            <div class="logo-img">
+                                <a href="index.html">
+                                    <img src="img/logo.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <!-- MAIN MENU -->
+                        <div class="col-xl-6 col-lg-6 d-lg-block d-xl-block d-none ">
+                            <div class="main-menu">
                                 <nav>
-                                    <ul id="navigation">
+                                    <ul id="navigation" class="js-clone-nav">
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="rooms.html">rooms</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
+                                        <li class="has-children">
+                                            <a href="#">
+                                                Кухни
+                                                <i class="ti-angle-down"></i>
+                                            </a>
                                             <ul class="submenu">
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="single-blog.html">single-blog</a></li>
+                                                <li><a href="blog.html">П-образные</a></li>
+                                                <li><a href="single-blog.html">Г-Образные</a></li>
+                                                <li><a href="single-blog.html">С островком</a></li>
+                                                <li><a href="single-blog.html">Современные</a></li>
+                                                <li><a href="single-blog.html">Классические</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                        <li class="has-children"><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="elements.html">elements</a></li>
                                             </ul>
@@ -69,14 +107,8 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="col-xl-2 col-lg-2">
-                            <div class="logo-img">
-                                <a href="index.html">
-                                    <img src="img/logo.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-5 col-lg-4 d-none d-lg-block">
+                        <!-- Social button -->
+                        <div class="col-xl-4 col-lg-4 d-lg-block d-xl-block d-none ">
                             <div class="book_room">
                                 <div class="socail_links">
                                     <ul>
@@ -100,10 +132,14 @@
                                 <div class="book_btn d-none d-lg-block">
                                     <a class="popup-with-form" href="#test-form">Book A Room</a>
                                 </div>
+
                             </div>
                         </div>
-                        <div class="col-12">
-                            <div class="mobile_menu d-block d-lg-none"></div>
+                        <!-- burger button for modile views -->
+                        <div class="col-6 col-md-6 d-sm-block d-lg-none d-xl-none button-open-mobile-menu pr-3">
+                            <a href="#" class="js-mobile-toggle">
+                                <i class="fa fa-bars" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
