--- a/mon/index.html
+++ b/mon/index.html
@@ -40,24 +40,18 @@
     <div class="loader-wrap">
          <div class="preloader "></div>
     </div>
+
+
+
     <div class="mobile_menu_block">
         <div class="offcavnas_menu">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <button>
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                        </button>
-                    </div>
-
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <div class="offcavnas_menu_main">
-
-                        </div>
-                    </div>
-                </div>
+            <div class="">
+                <div class="offcavnas-close"></div>
+                <div class="offcavnas-logo"></div>
+                <div class="offcavnas-main-menu"></div>
+                <div class="offcavnas-social-menu"></div>
+                <div class="offcavnas-phone-button"></div>
+                <div class="offcavnas-footer"></div>
             </div>
         </div>
     </div>
