--- a/mon/index.html
+++ b/mon/index.html
@@ -46,12 +46,32 @@
     <div class="mobile_menu_block">
         <div class="offcavnas_menu">
             <div class="">
-                <div class="offcavnas-close"></div>
-                <div class="offcavnas-logo"></div>
-                <div class="offcavnas-main-menu"></div>
-                <div class="offcavnas-social-menu"></div>
-                <div class="offcavnas-phone-button"></div>
-                <div class="offcavnas-footer"></div>
+                <div class="offcavnas-close">
+                    <span class="closed-mobile-menu">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="offcavnas-logo slider_text text-center p-2">
+                    <p>МЕНЮ</p>
+                </div>
+                <div class="offcavnas-main-menu p-4"></div>
+                <div class="offcavnas-social-menu p-2"></div>
+                <div class="offcavnas-phone-button  text-center">
+                    <div class="pb-3 pt-1">
+                        <div class="book_btn_mobile">
+                            <a class="" href="#">Оставить заявку</a>
+                        </div>
+                    </div>
+                    <div class="p-1">
+                        <a href="">+375 (29) 722-33-22</a>
+                    </div>
+                    <div class="p-1">
+                        <a href="">+375 (29) 722-13-44</a>
+                    </div>
+                </div>
+                <div class="offcavnas-footer">
+
+                </div>
             </div>
         </div>
     </div>
@@ -89,6 +109,9 @@
                                                 <li><a href="single-blog.html">С островком</a></li>
                                                 <li><a href="single-blog.html">Современные</a></li>
                                                 <li><a href="single-blog.html">Классические</a></li>
+                                                <li><a href="single-blog.html">С островком</a></li>
+                                                <li><a href="single-blog.html">Современные</a></li>
+                                                <li><a href="single-blog.html">Классические</a></li>
                                             </ul>
                                         </li>
                                         <li class="has-children"><a href="#">pages <i class="ti-angle-down"></i></a>
@@ -105,7 +128,7 @@
                         <div class="col-xl-4 col-lg-4 d-lg-block d-xl-block d-none ">
                             <div class="book_room">
                                 <div class="socail_links">
-                                    <ul>
+                                    <ul class="js-clone-social">
                                         <li>
                                             <a href="#">
                                                 <i class="fa fa-facebook-square"></i>
@@ -145,19 +168,24 @@
     <!-- slider_area_start -->
     <div class="slider_area">
         <div class="slider_active owl-carousel">
-            <div class="single_slider d-flex align-items-center justify-content-center slider_bg_1">
+            <div class="single_slider d-flex align-items-center justify-content-center slider_bg_4">
+                <div class="overlay-img"></div>
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="slider_text text-center">
-                                <h3>Montana Resort</h3>
-                                <p>Unlock to enjoy the view of Martine</p>
+                                <h3>Кухни под заказ</h3>
+                                <p>Современные кухни по индидуальному проекту</p>
+                            </div>
+                            <div class="text-center p-3">
+                                <button class="btn btn-info">Заказать</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="single_slider  d-flex align-items-center justify-content-center slider_bg_2">
+            <div class="single_slider  d-flex align-items-center justify-content-center slider_bg_3">c
+                <div class="overlay-img"></div>
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
@@ -169,7 +197,8 @@
                     </div>
                 </div>
             </div>
-            <div class="single_slider d-flex align-items-center justify-content-center slider_bg_1">
+            <div class="single_slider d-flex align-items-center justify-content-center slider_bg_5">
+                <div class="overlay-img"></div>
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
@@ -181,7 +210,8 @@
                     </div>
                 </div>
             </div>
-            <div class="single_slider  d-flex align-items-center justify-content-center slider_bg_2">
+            <div class="single_slider  d-flex align-items-center justify-content-center slider_bg_6">
+                <div class="overlay-img"></div>
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
@@ -389,14 +419,14 @@
 
                 <div class="row align-items-center justify-content-center">
 
-                    <div class="col-xl-7 col-lg-7 col-xl-push-5 col-lg-push-5 order-lg-first order-xl-first order-md-last order-sm-last order">
+                    <div class="col-xl-7 col-lg-7 col-xl-push-5  order-md-last order-sm-last ">
                         <div class="about_thumb d-flex ">
                             <div class="wrap-img">
                                 <img src="images/1.jpg" alt="">
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-5 col-lg-5 order-md-first order-sm-first order-lg-last order-xl-last">
+                    <div class="col-xl-5 col-lg-5 order-md-first order-sm-first order-0">
                         <div class="about_info">
                             <div class="section_title mb-20px">
                                 <span>Кухни</span>
