--- a/mon/index.html
+++ b/mon/index.html
@@ -69,8 +69,10 @@
                         <a href="">+375 (29) 722-13-44</a>
                     </div>
                 </div>
-                <div class="offcavnas-footer">
-
+                <div class="offcavnas-footer text-center mt-3 pt-5">
+                    <div>
+                        <a href="#">SV-kupe.by</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -167,63 +169,96 @@
 
     <!-- slider_area_start -->
     <div class="slider_area">
-        <div class="slider_active owl-carousel">
-            <div class="single_slider d-flex align-items-center justify-content-center slider_bg_4">
-                <div class="overlay-img"></div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <div class="slider_text text-center">
-                                <h3>Кухни под заказ</h3>
-                                <p>Современные кухни по индидуальному проекту</p>
-                            </div>
-                            <div class="text-center p-3">
-                                <button class="btn btn-info">Заказать</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_slider  d-flex align-items-center justify-content-center slider_bg_3">c
-                <div class="overlay-img"></div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <div class="slider_text text-center">
-                                <h3>Life is Beautiful</h3>
-                                <p>Unlock to enjoy the view of Martine</p>
+        <div class="slider-main">
+            <div class="slider_active owl-carousel">
+                <div class="single_slider d-flex align-items-center justify-content-center" style="background-image: url('images/7.jpg');">
+                    <div class="overlay-img"></div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <div class="slider_text text-center">
+                                    <h3>Кухни под заказ</h3>
+                                    <p>Современные кухни по индидуальному проекту</p>
+                                    <p>Дизайн, доставка и сборка <span style="color: #009DFF;">бесплатно</span></p>
+                                    <p>5 лет гарантия</p>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="single_slider d-flex align-items-center justify-content-center slider_bg_5">
-                <div class="overlay-img"></div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <div class="slider_text text-center">
-                                <h3>Montana Resort</h3>
-                                <p>Unlock to enjoy the view of Martine</p>
+                <div class="single_slider  d-flex align-items-center justify-content-center" style="background-image: url('images/9.jpg');" >
+                    <div class="overlay-img"></div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <div class="slider_text text-center">
+                                    <h3>Опыт</h3>
+                                    <p>Более <span style="color: #009DFF;">20</span> лет на рынке. 1000-и выполненых проектов</p>
+                                    <p>Создаем качественные кухни с учетом ваших пожеланий и последних тенденций </p>
+                                    <p>Используем качественные материалы и фунциональную фурнитуру известных брендов</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="single_slider  d-flex align-items-center justify-content-center slider_bg_6">
-                <div class="overlay-img"></div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <div class="slider_text text-center">
-                                <h3>Life is Beautiful</h3>
-                                <p>Unlock to enjoy the view of Martine</p>
+                <div class="single_slider d-flex align-items-center justify-content-center" style="background-image: url('images/8.jpg');">
+                    <div class="overlay-img"></div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <div class="slider_text text-center">
+                                    <h3>Оплата</h3>
+                                    <p><span style="color: #009DFF;">160$</span> - за погонный метр</p>
+                                    <p><span style="color: #009DFF;">0%</span> рассрочка на 12 месяцев</p>
+                                    <p>"КАРТА ПОКУПОК", "МАГНИТ", "МОЦНАЯ КАРТА"</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="block-bottom-data p-3">
+            <div class="overlay-data"></div>
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-md-4 d-flex p-2 justify-content-center align-items-center">
+                        <div class="icon pr-2">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                        </div>
+                        <div class="text">
+                            <div class="p-1">
+                                <a href="#">
+                                    +375 (29) 765-31-23
+                                </a>
+                            </div>
+                            <div class="p-1">
+                                <a href="#">
+                                    +375 (29) 765-31-23
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex p-2 justify-content-center align-items-center">
+                        <div class="icon pr-2">
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        </div>
+                        <div class="text ">
+                            <p class="m-0 text-center">
+                                г. Брест, ГОБК бывший в/г №1 "Крепость", строение 95</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex p-2 justify-content-center align-items-center">
+                        <button class="btn-danger btn">Рассчитать стоимость</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
     <!-- slider_area_end -->
 
@@ -603,37 +638,74 @@
     </div>
     <!-- video_area_end -->
 
+
+
     <!-- about_area_start -->
     <div class="about_area">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-7 col-lg-7">
-                    <div class="about_thumb2 d-flex">
-                        <div class="img_1">
-                            <img src="img/about/1.png" alt="">
-                        </div>
-                        <div class="img_2">
-                            <img src="img/about/2.png" alt="">
-                        </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-12 col-md-12 col-lg-12 text-center p-3">
+                          <h2>Пригласите дизайнера-конструктора для замера кухни</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-stretch ">
+                <div class="col-12 col-md-12 text-center p-4">
+                    <h3>Какую пользу принесет</h3>
+                    <p>вызов дизайнера-конструктора</p>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <ul class="profit-desing p-5">
+                            <li>Он правильно замерит размер кухни</li>
+                            <li>Порекомендует дизайн со вкусом под стиль ремонта</li>
+                            <li>Расскажет, как выгодно использовать пространство</li>
+                            <li>Подскажет, какой материал подойдет под ваши нужды</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-xl-5 col-lg-5">
-                    <div class="about_info">
-                        <div class="section_title mb-20px">
-                            <span>Delicious Food</span>
-                            <h3>We Serve Fresh and <br>
-                                Delicious Food</h3>
-                        </div>
-                        <p>Suscipit libero pretium nullam potenti. Interdum, blandit phasellus consectetuer dolor ornare
-                            dapibus enim ut tincidunt rhoncus tellus sollicitudin pede nam maecenas, dolor sem. Neque
-                            sollicitudin enim. Dapibus lorem feugiat facilisi faucibus et. Rhoncus.</p>
-                        <a href="#" class="line-button">Learn More</a>
+                <div class="col-md-4 ">
+                    <div>
+                        <img src="images/10.jpg" class="img-fluid re">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                        <ul class="profit-desing p-5">
+                            <li>Привезет образцы фасадов, чтобы вы их пощупали и увидели вживую</li>
+                            <li>Приедит в удобное для вас время</li>
+                            <li>Составит дизайн проект кухни</li>
+                            <li>Оформит договор в случае заказа</li>
+                        </ul>
                     </div>
                 </div>
             </div>
+            <div class="hj">
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <div class="text-center">
+                            <h3>Заполните ваши данные</h3>
+                            <p>чтобы мы могли согласовать время и дату приезда дизайнера</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+
+                    </div>
+
+                    <div class="col-md-12">
+                        <p>Либо позвоните по телефону:</p>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </div>
     <!-- about_area_end -->
+
+
 
     <!-- features_room_startt -->
     <div class="features_room">
