--- a/mon/index.html
+++ b/mon/index.html
@@ -62,6 +62,13 @@
                             <a class="" href="#">Оставить заявку</a>
                         </div>
                     </div>
+                    <div class="icon-phone-list">
+                        <ul class="d-flex justify-content-center align-items-center">
+                            <li><i class="fa fa-telegram" aria-hidden="true"></i></li>
+                            <li><i class="fa fa-whatsapp" aria-hidden="true"></i></li>
+                            <li><i class="fa fa-phone" aria-hidden="true"></i></li>
+                        </ul>
+                    </div>
                     <div class="p-1">
                         <a href="">+375 (29) 722-33-22</a>
                     </div>
@@ -71,7 +78,10 @@
                 </div>
                 <div class="offcavnas-footer text-center mt-3 pt-5">
                     <div>
-                        <a href="#">SV-kupe.by</a>
+
+                            <p>
+                                <a href="#">SV-KUPE</a>
+                            </p>
                     </div>
                 </div>
             </div>
@@ -639,49 +649,155 @@
     <!-- video_area_end -->
 
 
-
-    <!-- about_area_start -->
-    <div class="about_area">
+    <!-- Scheme work for Firma-->
+    <section class="m-5">
         <div class="container">
-            <div class="row justify-content-center align-items-center">
-                <div class="col-12 col-md-12 col-lg-12 text-center p-3">
-                          <h2>Пригласите дизайнера-конструктора для замера кухни</h2>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h3 class="m-0 header-blocl-scheme">Схема работы с клиентом</h3>
+                    <ul class="scheme-of-jobs">
+                        <li class="scheme-elem d-flex justify-content-start">
+                            <div class="number-icon d-flex justify-content-center align-items-center">
+                                <i class="fa fa-ravelry" aria-hidden="true"></i>
+                            </div>
+                            <div class="elem-data text-right">
+                                <div class="elem-data-head">
+                                    <h3>Заявка</h3>
+                                </div>
+                                <div class="elem-data-body">
+                                    <p>Принимаем вашу заявку с сайта или звонок</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="scheme-elem d-flex justify-content-end">
+                            <div class="number-icon d-flex justify-content-center align-items-center">
+                                <i class="fa fa-ravelry" aria-hidden="true"></i>
+                            </div>
+                            <div class="elem-data text-left">
+                                <div class="elem-data-head">
+                                    <h3>Консультация</h3>
+                                </div>
+                                <div class="elem-data-body">
+                                    <p>Предоставляем полную консультацию по продукту и предварительный расчёт</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="scheme-elem d-flex justify-content-start">
+                            <div class="number-icon d-flex justify-content-center align-items-center">
+                                <i class="fa fa-ravelry" aria-hidden="true"></i>
+                            </div>
+                            <div class="elem-data text-right">
+                                <div class="elem-data-head">
+                                    <h3>Замер</h3>
+                                </div>
+                                <div class="elem-data-body">
+                                    <p>Производим  замер с выбором материалов</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="scheme-elem d-flex justify-content-end">
+                            <div class="number-icon d-flex justify-content-center align-items-center">
+                                <i class="fa fa-ravelry" aria-hidden="true"></i>
+                            </div>
+                            <div class="elem-data text-left">
+                                <div class="elem-data-head">
+                                    <h3>Дизайн-проект</h3>
+                                </div>
+                                <div class="elem-data-body">
+                                    <p>Разрабатываем дизайн кухни с учетом ваших пожеланий</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="scheme-elem d-flex justify-content-start mb-0">
+                            <div class="number-icon d-flex justify-content-center align-items-center">
+                                <i class="fa fa-ravelry" aria-hidden="true"></i>
+                            </div>
+                            <div class="elem-data text-right">
+                                <div class="elem-data-head">
+                                    <h3>Договор</h3>
+                                </div>
+                                <div class="elem-data-body">
+                                    <p>Заключаем договор и запускаем в работу</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="scheme-elem d-flex justify-content-end">
+                            <div class="number-icon d-flex justify-content-center align-items-center">
+                                <i class="fa fa-ravelry" aria-hidden="true"></i>
+                            </div>
+                            <div class="elem-data text-left">
+                                <div class="elem-data-head">
+                                    <h3>Установка</h3>
+                                </div>
+                                <div class="elem-data-body">
+                                    <p>Доставляем и устанавливаем кухню</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="scheme-elem d-flex justify-content-start mb-0">
+                            <div class="number-icon d-flex justify-content-center align-items-center">
+                                <i class="fa fa-ravelry" aria-hidden="true"></i>
+                            </div>
+                            <div class="elem-data text-right">
+                                <div class="elem-data-head">
+                                    <h3>Гарания</h3>
+                                </div>
+                                <div class="elem-data-body">
+                                    <p>Осуществляем гарантийное обслуживание</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="footer-scheme"></div>
                 </div>
             </div>
-            <div class="row justify-content-center align-items-stretch ">
-                <div class="col-12 col-md-12 text-center p-4">
-                    <h3>Какую пользу принесет</h3>
-                    <p>вызов дизайнера-конструктора</p>
-                </div>
-                <div class="col-md-4">
-                    <div>
-                        <ul class="profit-desing p-5">
-                            <li>Он правильно замерит размер кухни</li>
-                            <li>Порекомендует дизайн со вкусом под стиль ремонта</li>
-                            <li>Расскажет, как выгодно использовать пространство</li>
-                            <li>Подскажет, какой материал подойдет под ваши нужды</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 ">
-                    <div>
-                        <img src="images/10.jpg" class="img-fluid re">
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div>
-                        <ul class="profit-desing p-5">
-                            <li>Привезет образцы фасадов, чтобы вы их пощупали и увидели вживую</li>
-                            <li>Приедит в удобное для вас время</li>
-                            <li>Составит дизайн проект кухни</li>
-                            <li>Оформит договор в случае заказа</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="hj">
+        </div>
+    </section>
+    <!--END Scheme work for Firma-->
+    <!-- Order desing for home -->
+    <section>
+        <div class="about_area">
+            <div class="container">
                 <div class="row justify-content-center align-items-center">
-                    <div class="col-md-12 d-flex justify-content-center">
+                    <div class="col-12 col-md-12 col-lg-12 text-center p-3">
+                        <h2>Пригласите дизайнера-конструктора для замера кухни</h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center align-items-center ">
+                    <div class="col-12 col-md-12 text-center p-4">
+                        <h3>Какую пользу принесет</h3>
+                        <p>вызов дизайнера-конструктора</p>
+                    </div>
+                    <div class="col-md-4">
+                        <div>
+                            <ul class="profit-desing p-1">
+                                <li><i class="fa fa-star" aria-hidden="true"></i> Он правильно замерит размер кухни</li>
+                                <li><i class="fa fa-star" aria-hidden="true"></i> Порекомендует дизайн со вкусом под стиль ремонта</li>
+                                <li><i class="fa fa-star" aria-hidden="true"></i> Расскажет, как выгодно использовать пространство</li>
+                                <li><i class="fa fa-star" aria-hidden="true"></i> Подскажет, какой материал подойдет под ваши нужды</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-none d-md-block">
+                        <div>
+                            <img src="images/10.jpg" class="img-fluid profit-img">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div>
+                            <ul class="profit-desing p-1">
+                                <li><i class="fa fa-star" aria-hidden="true"></i> Привезет образцы фасадов, чтобы вы их пощупали и увидели вживую</li>
+                                <li><i class="fa fa-star" aria-hidden="true"></i> Приедит в удобное для вас время</li>
+                                <li><i class="fa fa-star" aria-hidden="true"></i> Составит дизайн проект кухни</li>
+                                <li><i class="fa fa-star" aria-hidden="true"></i> Оформит договор в случае заказа</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-md-12 d-flex justify-content-center pt-5">
                         <div class="text-center">
                             <h3>Заполните ваши данные</h3>
                             <p>чтобы мы могли согласовать время и дату приезда дизайнера</p>
@@ -689,21 +805,38 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-md-12">
 
+                <form class="form-contact contact_form" action=""  id="contactForm1" novalidate="novalidate">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <input class="form-control valid" name="name" id="name" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Ваше имя'" placeholder="Ваше имя">
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <input class="form-control valid" name="phone" id="phone" type="tel" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Ваше номер телефона'" placeholder="Ваш номер телефона">
+                            </div>
+                        </div>
                     </div>
+                    <div class="form-group mt-3 text-center">
+                        <button type="submit" class="button button-contactForm boxed-btn">Вызвать дизайнера</button>
+                    </div>
+                </form>
 
-                    <div class="col-md-12">
-                        <p>Либо позвоните по телефону:</p>
-                    </div>
+
+                <div class="col-md-12 text-center">
+                    <p>
+                        Либо позвоните по телефону:
+                    </p>
+                    <div> <a href="">+375 (29) 765-31-23</a></div>
+                    <div> <a href="">+375 (29) 765-31-23</a></div>
                 </div>
 
             </div>
-
         </div>
-    </div>
-    <!-- about_area_end -->
+    </section>
+    <!-- END Order desing for home -->
 
 
 
